--- a/latest-configurations/.tmux.conf
+++ b/latest-configurations/.tmux.conf
@@ -1,44 +1,46 @@
 # Settings
-set -g prefix C-a					# Ctrl-A default prefix
-set -g mouse on						# Enable mouse
-set -s default-terminal tmux-256color			# Enable 256 colors
-set-option -g default-shell /usr/bin/fish		# Default shell: ZSH
-set -as terminal-overrides ",*:Tc"			# Allows termguicolors to work alongside TMUX
-set -g base-index 1					# Start with index 1
-set -g pane-base-index 1				# Start with pane 1
-setw -g mode-keys vi					# Enable Vi mode
-set -g status-keys vi					# Enable status keys vi 
+set -g prefix C-a                                   # Ctrl-A default prefix
+set -g mouse on                                     # Enable mouse
+set -s default-terminal tmux-256color               # Enable 256 colors
+set-option -g default-shell /usr/bin/zsh            # Default shell: ZSH
+set -as terminal-overrides ",*:Tc"                  # Allows termguicolors to work alongside TMUX
+set -g base-index 1                                 # Start with index 1
+set -g pane-base-index 1                            # Start with pane 1
+setw -g mode-keys vi                                # Enable Vi mode
+set -g status-keys vi                               # Enable status keys vi 
 
 # Split bindings
-bind / split-window -h -c '#{pane_current_path}'	# - for vertical  spliting
-bind - split-window -v -c '#{pane_current_path}'	# / for horizontal spliting
-bind c new-window -c '#{pane_current_path}'		# New window in current path
+bind / split-window -h -c '#{pane_current_path}'    # - for vertical  spliting
+bind - split-window -v -c '#{pane_current_path}'    # / for horizontal spliting
+bind c new-window -c '#{pane_current_path}'         # New window in current path
 
 # Movement binding
-bind -n M-Left select-pane -L				# Alt+Left for selecting left pane
-bind -n M-Right select-pane -R				# Alt+Right for selecting Right pane 
-bind -n M-Up select-pane -U				# Alt+Up for selecting upward pane
-bind -n M-Down select-pane -D				# Alt+Down for selecting downward pane
-bind -r j resize-pane -D 2				# Prefix + j to resize pane from the bottom
+bind -n M-Left select-pane -L                       # Alt+Left for selecting left pane
+bind -n M-Right select-pane -R                      # Alt+Right for selecting Right pane 
+bind -n M-Up select-pane -U                         # Alt+Up for selecting upward pane
+bind -n M-Down select-pane -D                       # Alt+Down for selecting downward pane
+bind -r j resize-pane -D 2                          # Prefix + j to resize pane from the bottom
 
 # Resize binding
-bind -r k resize-pane -U 2				# Prefix + k to resize pane from the top
-bind -r h resize-pane -L 2				# Prefix + h to resize pane from the left
-bind -r l resize-pane -R 2				# Prefix + l to resize pane from the right
-set -s escape-time 1					# Reduce escape time
+bind -r k resize-pane -U 2                          # Prefix + k to resize pane from the top
+bind -r h resize-pane -L 2                          # Prefix + h to resize pane from the left
+bind -r l resize-pane -R 2                          # Prefix + l to resize pane from the right
+set -s escape-time 1                                # Reduce escape time
 
 # Copy/Paste bindings
-bind P paste-buffer					# Vi Copy/Paste
+bind P paste-buffer                                 # Vi Copy/Paste
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Colorscheme
+source-file "$HOME/.tmux/colors/challenger-deep.tmuxtheme"
 
 # Tmux Plugin Manager (TPM)
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'egel/tmux-gruvbox'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
